<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/text_10"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_200"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="@dimen/text_06"
                    app:cardCornerRadius="@dimen/text_15"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/text_15">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/customer"
                            android:layout_gravity="center"
                            android:textSize="@dimen/text_20"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cust_name"
                            android:layout_gravity="start"
                            android:layout_marginTop="@dimen/text_05"
                            android:textSize="@dimen/text_15" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cust_dob"
                            android:layout_marginTop="@dimen/text_05"
                            android:layout_gravity="start"
                            android:textSize="@dimen/text_15" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cust_email"
                            android:layout_marginTop="@dimen/text_05"
                            android:layout_gravity="start"
                            android:textSize="@dimen/text_15" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cust_phone"
                            android:layout_gravity="start"
                            android:layout_marginTop="@dimen/text_05"
                            android:textSize="@dimen/text_15" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="@dimen/text_06"
                    app:cardCornerRadius="@dimen/text_20"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/text_20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seller"
                            android:layout_gravity="center"
                            android:textSize="@dimen/text_20"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seller_name"
                            android:layout_gravity="start"
                            android:layout_marginTop="@dimen/text_05"
                            android:textSize="@dimen/text_15" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seller_email"
                            android:layout_marginTop="@dimen/text_05"
                            android:layout_gravity="start"
                            android:textSize="@dimen/text_15" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seller_phone"
                            android:layout_marginTop="@dimen/text_05"
                            android:layout_gravity="start"
                            android:textSize="@dimen/text_15" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/list_selected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/text_05"
                    android:padding="@dimen/text_05" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/print"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_print"
                        app:elevation="@dimen/text_06"
                        android:layout_marginBottom="@dimen/text_05"/>
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_dialog_email"
                        android:layout_below="@id/print"
                        app:elevation="@dimen/text_06"/>

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="@color/colorPrimaryDark"
                app:tabGravity="fill"
                app:tabMode="fixed"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>